[package]
name = "blueshift-pinocchio-quantum-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pinocchio = "0.7.0"
pinocchio-system = "0.3.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
